--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
 
   <header id="myheader">
     <div class="mycontainer">
-            <a href="index.html" id="navbar">Your Name</a>
+            <a href="index.html" id="navbar">Jon Jackson</a>
             <nav>
               <a href="index.html">About</a>
               <a href="portfolio.html">Portfolio</a>
