--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
 
   <div id="main-container" class="mycontainer">
     <section class="main-section">
-        <h1>Portfolio</h1>
+        <h1>Contact Me</h1>
             <form>
                 Name<br><input class ="textboxid" type="text" name="first-name"><br>
                 Email<br><input class ="textboxid" type="email" name="email"><br>
