--- a/contact.html
+++ b/contact.html
@@ -15,9 +15,11 @@
     <div class="mycontainer">
             <a href="index.html" id="navbar">Jon Jackson</a>
             <nav>
-              <a href="index.html">About</a>
-              <a href="portfolio.html">Portfolio</a>
-              <a href="contact.html">Contact</a>
+              <ul>
+                <li><a href="index.html">About</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="contact.html">Contact</a></li>
+              </ul>
             </nav>
     </div>
   </header>
