--- a/portfolio.html
+++ b/portfolio.html
@@ -27,11 +27,11 @@
   <div id="main-container" class="mycontainer">
     <section class="main-section">
             <h1>Portfolio</h1>
-            <img src = "assets/images/350x150.png" alt="Portfolio 1" class="imgfolio">
-            <img src = "assets/images/350x150.png" alt="Portfolio 2" class="imgfolio">
-            <img src = "assets/images/350x150.png" alt="Portfolio 2" class="imgfolio">
-            <img src = "assets/images/350x150.png" alt="Portfolio 2" class="imgfolio">
-            <img src = "assets/images/350x150.png" alt="Portfolio 2" class="imgfolio">
+            <img src = "assets/images/sampleproject.jpg" alt="Portfolio" class="imgfolio">
+            <img src = "assets/images/wordgame.jpg" alt="Word Game" class="imgfolio">
+            <img src = "assets/images/sample3.jpg" alt="Portfolio 3" class="imgfolio">
+            <img src = "assets/images/sample3.jpg" alt="Portfolio 4" class="imgfolio">
+            <img src = "assets/images/sample3.jpg" alt="Portfolio 5" class="imgfolio">
 
     </section>
 
